<resources>
    <string name="app_name">Homework-Toolbar</string>
    <string name="biography">The Beatles were an English rock band formed in Liverpool in 1960. The group, whose best-known line-up comprised John Lennon, Paul McCartney, George Harrison and Ringo
        Starr, are regarded as the most influential band of all time. They were integral to the development of 1960s counterculture and popular musics recognition as an art form.
        Rooted in skiffle, beat and 1950s rock and roll, their sound incorporated elements of classical music and traditional pop in innovative ways; the band later explored music styles ranging from ballads
        and Indian music to psychedelia and hard rock. As pioneers in recording, songwriting and artistic presentation, the Beatles revolutionised many aspects of the music industry and were often publicised as leaders of the era youth and sociocultural movements.</string>
    <string name="member1">John Lennon</string>
    <string name="member2">Paul McCartney</string>
    <string name="member3">George Harrison</string>
    <string name="member4">Ringo Starr</string>
    <string name="search">Search</string>
</resources>